--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "react-use": "^17.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
