--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
+    "react-transition-group": "^4.4.2",
     "react-use": "^17.2.4",
     "web-vitals": "^1.1.2"
   },
