--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "http://rahul868k.github.io/securepay-spa",
+  "homepage": "http://rahul868k.github.io/react",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "jquery": "^3.6.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-burger-menu": "^3.0.6",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.2.4",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -54,6 +63,7 @@
     "@types/react": "^17.0.15",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-table": "^7.7.2",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "redux-devtools": "^3.7.0"
   }
 }
